--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1311,7 +1311,7 @@ top panel
                     }
                 }
 
-                &.mil-has-children {
+                &.  {
                     position: relative;
                     padding-right: 10px;
 
@@ -1419,7 +1419,7 @@ top panel
                         }
                     }
 
-                    &.mil-has-children {
+                    &.  {
                         overflow: hidden;
                         height: auto;
                         padding-right: 0;
