--- a/css/style.css
+++ b/css/style.css
@@ -1941,11 +1941,11 @@ top panel
   color: rgb(0, 0, 0);
   background-color: rgb(188, 255, 0);
 }
-.mil-navigation nav ul li.mil-has-children {
+.mil-navigation nav ul li.  {
   position: relative;
   padding-right: 10px;
 }
-.mil-navigation nav ul li.mil-has-children:after {
+.mil-navigation nav ul li. :after {
   content: "";
   width: 100%;
   height: 40px;
@@ -1954,7 +1954,7 @@ top panel
   bottom: -40px;
   left: 0;
 }
-.mil-navigation nav ul li.mil-has-children ul {
+.mil-navigation nav ul li.  ul {
   opacity: 0;
   position: absolute;
   left: -30px;
@@ -1967,20 +1967,20 @@ top panel
   background-color: rgb(188, 255, 0);
   transition: 0.4s cubic-bezier(0, 0, 0.3642, 1);
 }
-.mil-navigation nav ul li.mil-has-children ul li {
+.mil-navigation nav ul li.  ul li {
   position: relative;
   margin-bottom: 15px;
 }
-.mil-navigation nav ul li.mil-has-children ul li:last-child {
+.mil-navigation nav ul li.  ul li:last-child {
   margin-bottom: 0;
 }
-.mil-navigation nav ul li.mil-has-children ul li a {
+.mil-navigation nav ul li.  ul li a {
   color: rgb(0, 0, 0);
 }
-.mil-navigation nav ul li.mil-has-children ul li a:hover {
+.mil-navigation nav ul li.  ul li a:hover {
   transform: translateX(5px);
 }
-.mil-navigation nav ul li.mil-has-children:hover ul {
+.mil-navigation nav ul li. :hover ul {
   opacity: 1;
   pointer-events: all;
   transform: translateY(0) scale(1);
@@ -2033,15 +2033,15 @@ top panel
   .mil-navigation nav ul li a:hover {
     color: rgb(0, 0, 0);
   }
-  .mil-navigation nav ul li.mil-has-children {
+  .mil-navigation nav ul li.  {
     overflow: hidden;
     height: auto;
     padding-right: 0;
   }
-  .mil-navigation nav ul li.mil-has-children:before {
+  .mil-navigation nav ul li. :before {
     display: none;
   }
-  .mil-navigation nav ul li.mil-has-children > a:before {
+  .mil-navigation nav ul li.  > a:before {
     content: "";
     position: absolute;
     top: 0;
@@ -2051,7 +2051,7 @@ top panel
     border-radius: 50%;
     border: solid 2px rgb(188, 255, 0);
   }
-  .mil-navigation nav ul li.mil-has-children ul {
+  .mil-navigation nav ul li.  ul {
     position: static;
     margin-left: -1px;
     opacity: 1;
@@ -2064,19 +2064,19 @@ top panel
     background-color: rgb(0, 0, 0);
     box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
   }
-  .mil-navigation nav ul li.mil-has-children ul li a {
+  .mil-navigation nav ul li.  ul li a {
     color: rgb(255, 255, 255);
   }
-  .mil-navigation nav ul li.mil-has-children ul li a:hover {
+  .mil-navigation nav ul li.  ul li a:hover {
     transform: none;
   }
-  .mil-navigation nav ul li.mil-has-children ul li:first-child {
+  .mil-navigation nav ul li.  ul li:first-child {
     margin-top: 30px;
   }
-  .mil-navigation nav ul li.mil-has-children ul li:last-child {
+  .mil-navigation nav ul li.  ul li:last-child {
     margin-bottom: 30px;
   }
-  .mil-navigation nav ul li.mil-has-children:hover ul {
+  .mil-navigation nav ul li. :hover ul {
     margin-top: 15px;
     max-height: 250px;
   }
